# orochi

./: .gitignore  README.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  winutil.rs
test-extension/: README.md  background.js  bridge.js  inject.js  manifest.json
ui/: cursor.html  index.html  overlay.html
userscript/: orochi-quality-hook.user.js
