[package]
name = "orochi"
version = "0.3.2"
description = "Orochi desktop tools"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
xcap = "0.9.6"
base64 = "0.22.1"
image = { version = "0.25.6", default-features = false, features = ["gif", "png"] }
tiny_http = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
